REfactored code. Added Wather icons.

--- a/Weather.DataProvider.WMO.Data.File/Weather.DataProvider.WMO.Data.File.csproj
+++ b/Weather.DataProvider.WMO.Data.File/Weather.DataProvider.WMO.Data.File.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Cities\Service\**" />
+    <Compile Remove="WeatherIcons\Service\**" />
+    <EmbeddedResource Remove="Cities\Service\**" />
+    <EmbeddedResource Remove="WeatherIcons\Service\**" />
+    <None Remove="Cities\Service\**" />
+    <None Remove="WeatherIcons\Service\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="LazyCache" Version="2.4.0" />
     <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
     <PackageReference Include="log4net" Version="2.0.14" />
@@ -14,7 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Weather.DataProvider.WMO.Cities.Service\Weather.DataProvider.WMO.Cities.Service.csproj" />
+    <ProjectReference Include="..\Weather.DataProvider.WMO.Data.Cities\Weather.DataProvider.WMO.Data.Cities.csproj" />
+    <ProjectReference Include="..\Weather.DataProvider.WMO.Data.WeatherIcons\Weather.DataProvider.WMO.Data.WeatherIcons.csproj" />
     <ProjectReference Include="..\Weather.DataProvider.WMO.Resource\Weather.DataProvider.WMO.Resource.csproj" />
   </ItemGroup>
 
