--- a/WeatherAPI/appsettings.json
+++ b/WeatherAPI/appsettings.json
@@ -18,6 +18,19 @@
           "Location": "APIs\\WMO\\DataSource\\City"
         }
       },
+      "Icons": {
+        "Data": {
+          "File": {
+            "Filename": "data.json",
+            "Location": "APIs\\WMO\\DataSource\\WeatherIcons"
+          }
+        },
+        "Server": {
+          "WMOIconUrl": "https://lemon-forest-0b08efc10.1.azurestaticapps.net/wmo",
+          "SVGIconUrl": "https://lemon-forest-0b08efc10.1.azurestaticapps.net/svg",
+          "ServerUrl": "https://lemon-forest-0b08efc10.1.azurestaticapps.net"
+        }
+      },
       "Organization": {
         "Name": "WMO World Weather Information Service",
         "Website": "https://worldweather.wmo.int"
