--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/WeatherAPI/Properties/ServiceDependencies/nestas-weather-api - Web Deploy/profile.arm.json
